--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 
@@ -10,6 +11,7 @@ body {
     background-color: #F5F6FA;
     color: rgb(43, 43, 43);
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 
@@ -135,7 +137,7 @@ li {
     display: inline-flex;
     border-radius: 5px;
     color: blue;
-    transition: all .5s ease-in;
+    transition: all .5s ease;
     
 }
 
@@ -202,3 +204,85 @@ li {
 
 
 // Section 2 End
+
+//Section 3 Start
+
+
+.owl-prev {
+    margin-right: 2rem;
+    
+}
+
+.anan {
+    background-color: red;
+    height: 300px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+
+//Section 3 END
+
+// Section 4 Start
+
+.section-4 {
+    margin: 3rem 0;
+}
+
+
+.herkes-guvende {
+    font-weight: 600;
+}
+
+.s-4-li {
+    margin: 0;
+}
+
+
+
+
+
+
+
+// Section 4 End
+
+// Back To Top Button
+#btt {
+    display: inline-block;
+    background-color: #090085;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 70px;
+    right: 150px;
+    transition: background-color .3s, 
+      opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+  }
+  #btt::after {
+    content: "\f077";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: #fff;
+  }
+  #btt:hover {
+    cursor: pointer;
+    background-color: #333;
+  }
+  #btt:active {
+    background-color: #555;
+  }
+  #btt.show {
+    opacity: 1;
+    visibility: visible;
+  }
+
+// End Back to Top Button
