--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +10,6 @@ body {
   background-color: #F5F6FA;
   color: #2b2b2b;
   font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
 }
 
 a {
@@ -178,40 +178,32 @@ li {
   margin-right: 2rem;
 }
 
-.anan {
-  background-color: red;
-  height: 300px;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .section-4 {
-  margin: 3rem 0;
+  margin: 10rem 0;
 }
 
 .herkes-guvende {
   font-weight: 600;
 }
 
-.s-4-li {
-  margin: 0;
+.s-4-p {
+  margin: 2rem 0 4rem 0;
 }
 
-#btt {
+.kalın {
+  font-weight: 600;
+}
+
+#button {
   display: inline-block;
-  background-color: #090085;
+  background-color: #170099;
   width: 50px;
   height: 50px;
   text-align: center;
   border-radius: 4px;
   position: fixed;
-  bottom: 70px;
-  right: 150px;
+  bottom: 30px;
+  right: 30px;
   -webkit-transition: background-color .3s,  opacity .5s, visibility .5s;
   transition: background-color .3s,  opacity .5s, visibility .5s;
   opacity: 0;
@@ -219,7 +211,7 @@ li {
   z-index: 1000;
 }
 
-#btt::after {
+#button::after {
   content: "\f077";
   font-family: FontAwesome;
   font-weight: normal;
@@ -229,17 +221,25 @@ li {
   color: #fff;
 }
 
-#btt:hover {
+#button:hover {
   cursor: pointer;
   background-color: #333;
 }
 
-#btt:active {
+#button:active {
   background-color: #555;
 }
 
-#btt.show {
+#button.show {
   opacity: 1;
   visibility: visible;
+}
+
+footer {
+  background-color: #eeeeee;
+  padding: 5rem 18rem 5rem 18rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
