--- a/style.scss
+++ b/style.scss
@@ -287,5 +287,5 @@ li {
 footer {
     background-color: rgb(238, 238, 238);
     padding: 5rem 18rem 5rem 18rem;
-    justify-content: center;
+    width: 100%;
 }
